<resources>
    <string name="app_name">Codex Patcher V3</string>
    <string name="ipad">iPad view</string>
    <string name="headshot">Headshot</string>
    <string name="power">Select Power</string>
    <string name="zero_gravity">Zero Gravity</string>
    <string name="color_mod">Color white</string>
    <string name="magic_bullet">Magic bullet</string>
    <string name="less_recoil">Less recoil</string>
    <string name="select_mod">Select Mod</string>
    <string name="apply">Apply</string>
    <string name="select_version">Select version</string>
    <string name="glabal">Glabal</string>
    <string name="korean">Korean</string>
    <string name="aimbot">Aimbot</string>
    <string name="no_grass">No grass</string>
    <string name="high_power">High power</string>
    <string name="wall_glich">FPP Render [glitch]</string>
    <string name="version">Version : 5.0.0</string>
</resources>