<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/ipad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/ipad"
        android:textColor="@color/ylo"
        android:thumbTint="@color/blue"
        android:trackTint="@color/blue"
        android:trackTintMode="src_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grass" />

    <Switch
        android:id="@+id/zero_gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/zero_gravity"
        android:textColor="@color/ylo"
        android:thumbTint="@color/blue"
        android:trackTint="@color/blue"
        android:trackTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <SeekBar
        android:id="@+id/headshot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:progressTint="@color/blue"
        android:thumbTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Switch
        android:id="@+id/color_mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/color_mod"
        android:textColor="@color/ylo"
        android:thumbTint="@color/blue"
        android:trackTint="@color/blue"
        android:trackTintMode="src_in"
        app:layout_constraintEnd_toStartOf="@+id/zero_gravity"
        app:layout_constraintStart_toEndOf="@+id/grass"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="12dp"
        android:text="@string/headshot"
        android:textColor="@color/ylo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <SeekBar
        android:id="@+id/bullet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:progressTint="@color/blue"
        android:thumbTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/magic_bullet"
        android:textColor="@color/ylo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/less_recoil"
        android:textColor="@color/ylo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <SeekBar
        android:id="@+id/less_recoil"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progressTint="@color/blue"
        android:thumbTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/power"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdogrp_version" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/select_mod"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_version"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdogrp_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/global"
            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:text="@string/glabal"
            android:textColor="@color/ylo"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/korean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:checked="true"
            android:text="@string/korean"
            android:textColor="@color/ylo"
            android:textStyle="bold" />

    </RadioGroup>


    <SeekBar
        android:id="@+id/aimbot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progressTint="@color/blue"
        android:thumbTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/aimbot"
        android:textColor="@color/ylo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Switch
        android:id="@+id/grass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/no_grass"
        android:textColor="@color/ylo"
        android:thumbTint="@color/blue"
        android:trackTint="@color/blue"
        android:trackTintMode="src_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Switch
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/high_power"
        android:textColor="@color/ylo"
        android:thumbTint="@color/blue"
        android:trackTint="@color/blue"
        android:trackTintMode="src_in"
        app:layout_constraintEnd_toStartOf="@+id/fpp_glitch"
        app:layout_constraintStart_toEndOf="@+id/ipad"
        app:layout_constraintTop_toBottomOf="@+id/color_mod" />

    <Switch
        android:id="@+id/fpp_glitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/wall_glich"
        android:textColor="@color/ylo"
        android:thumbTint="@color/blue"
        android:trackTint="@color/blue"
        android:trackTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero_gravity" />

</androidx.constraintlayout.widget.ConstraintLayout>